# platform-init

./: .gitignore  OWNERS  activation.hpp  cmos_reset.cpp  cmos_reset.hpp  gpio.cpp  gpio.hpp  host_bios_reset.cpp  host_bios_reset.hpp  i2c.cpp  i2c.hpp  meson.build  meson.options  platform.cpp  platform_init.service.in  utilities.cpp  utilities.hpp
cmos-reset/: cmos_reset.cpp  cmos_reset.hpp  cmos_reset_main.cpp  host_power.cpp  host_power.hpp  meson.build  xyz.openbmc_project.Software.Host.Updater0.service.in
intel/: acrp.cpp  intel.hpp  jcrp.cpp
meta/: catalina.cpp  meta.hpp
nvidia/: gb200.cpp  nvidia.hpp  nvl32.cpp
subprojects/: sdbusplus.wrap
