option(
    'platform-name',
    type: 'string',
    value: 'nvidia-gb200',
    description: 'Platform to init (Temporary)',
)

option(
    'cmos-reset',
    type: 'feature',
    value: 'disabled',
    description: 'Enable CMOS reset service',
)

option(
    'host-state-transition-timeout',
    type: 'integer',
    value: 60,
    description: 'Timeout for host state transition.',
)
